# htool_benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ToDo.md  cmake-format.py
include/: NEW_add_hmatrix_vector_product.hpp  NEW_hmatrix_build.hpp  NEW_tree_builder.hpp  bench_compression.hpp  bench_hmatrix.hpp  bench_hmatrix_build.hpp  bench_hmatrix_matrix_product.hpp  benchmark_hmatrix_build.hpp  geometry.hpp  kernel.hpp  kernels.hpp  misc.hpp  run.hpp  task_based_tree_builder.hpp  utils.hpp
include/htool_benchmark/: WIP_task_based_hmatrix_factorization.hpp  bench_hmatrix_build.hpp  bench_hmatrix_factorization.hpp  bench_hmatrix_matrix_product.hpp  cli.hpp  generator_fixture.hpp  generator_types.hpp  hmatrix_fixture.hpp  task_based_add_hmatrix_vector_product.hpp  task_based_tree_builder.hpp  utils.hpp
output_reference/v0.1.0/Hmatrix_build_vs_pbl_size/32768__65536_131072_262144_524288/: bench_hmatrix_build_vs_pbl_size.csv
output_reference/v0.1.0/Hmatrix_build_vs_ratio/_32768__65536_131072_262144_524288__1__2__4__8_16/: bench_hmatrix_build_vs_ratio.csv
output_reference/v0.1.0/Hmatrix_build_vs_thread/1__2__4__8_16/: bench_hmatrix_build_vs_thread.csv
output_reference/v0.1.0/Hmatrix_factorization_vs_pbl_size/16384__32768__65536_131072_262144/: bench_hmatrix_factorization_Cholesky_vs_pbl_size.csv  bench_hmatrix_factorization_LU_vs_pbl_size.csv
output_reference/v0.1.0/Hmatrix_matrix_product_vs_pbl_size/32768__65536_131072_262144_524288/: bench_hmatrix_matrix_product_vs_pbl_size.csv
output_reference/v0.1.0/Hmatrix_matrix_product_vs_ratio/_32768__65536_131072_262144_524288__1__2__4__8_16/: bench_hmatrix_matrix_product_vs_ratio.csv
output_reference/v0.1.0/Hmatrix_matrix_product_vs_thread/1__2__4__8_16/: bench_hmatrix_matrix_product_vs_thread.csv
plotting_scripts/: bench_hmatrix_build.py
scripts/: run.sh  run_bench_compression.sh  run_bench_hmatrix.sh  run_bench_treebuilder.sh  run_plot_bench.sh  slurm  slurm.sh  slurm_build.sh  slurm_facto.sh  slurm_product.sh
src/: BuildHMat%PblSize.py  BuildHMat%ThreadsNumber.py  CMakeLists.txt  NEW_test_hmatrix_build_double.cpp  bench_compression.cpp  bench_hmatrix.cpp  bench_hmatrix_build.cpp  bench_hmatrix_build.hpp  bench_hmatrix_build_vs_pbl_size.cpp  bench_hmatrix_build_vs_thread_numbers.cpp  bench_hmatrix_factorization.cpp  bench_hmatrix_matrix_product.cpp  bench_hmatrix_matrix_product.hpp  bench_hmatrix_matrix_product_vs_pbl_size.cpp  bench_hmatrix_matrix_product_vs_thread_numbers.cpp  double_SVD_GeometricClustering_RjasanowSteinbach_Gravitational.cpp  my_test_hmatrix_build_double.cpp  plot_bench.py  plot_bench_vs_thread.py  product_Hmat_mat_vs_pbl_size.py
src/Bench_WO_GBm/: bench_hmatrix_build.cpp  bench_hmatrix_build.hpp  bench_hmatrix_build_vs_pbl_size.cpp  bench_hmatrix_build_vs_ratio.cpp  bench_hmatrix_build_vs_thread.cpp  bench_hmatrix_factorization_vs_pbl_size.cpp  bench_hmatrix_matrix_product.cpp  bench_hmatrix_matrix_product.hpp  bench_hmatrix_matrix_product_vs_pbl_size.cpp  bench_hmatrix_matrix_product_vs_ratio.cpp  bench_hmatrix_matrix_product_vs_thread.cpp  plot_bench_hmatrix_build_vs_pbl_size.py  plot_bench_vs_pbl_size.py  plot_bench_vs_ratio.py  plot_bench_vs_thread.py  utils.hpp
